# wgit

./: AGENTS.md  Cargo.toml  PRODUCT_ROADMAP.md  PROJECT_ROADMAP_PLAN.md  clippy.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release-macos.yml
src/: app.rs  commands.rs  git_model.rs  icon.rs  main.rs  models.rs  rect.wgsl  render.rs  repo_store.rs  text.wgsl  theme.rs  utils.rs
src/app/: mod.rs
tests/: git_model_backend.rs
